--- a/volandouy oficial/src/main/webapp/front/consultaUsuario.html
+++ b/volandouy oficial/src/main/webapp/front/consultaUsuario.html
@@ -9,6 +9,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Tu CSS -->
   <link href="../assets/css/styles.css" rel="stylesheet">
+
+  <style>
+    body { padding-top: 56px; } /* alto aprox navbar fixed-top */
+  </style>
+
 </head>
 
 
