--- a/volandouy oficial/src/main/webapp/index.html
+++ b/volandouy oficial/src/main/webapp/index.html
@@ -1,40 +1,13 @@
-<!doctype html>
-<html lang="es">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Volando.uy — Inicio</title>
-  <!-- Bootstrap 5 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/css/styles.css" rel="stylesheet">
+	<meta charset="UTF-8">
+	<title>VolandoUy</title>
+	<!-- Redirige al servlet de iniciar sesión -->
+		<meta http-equiv="refresh" content="0;URL=/volnadouy-oficial/home">
+	
 </head>
-<body class="index-page">
-    <nav class="navbar navbar-dark bg-dark fixed-top navbar-compact">
-        <div class="container">
-        <a class="navbar-brand fw-bold" href="#">Volando.uy</a>
-        </div>
-    </nav>
-  <!-- Sección con fondo -->
-  <main class="portada d-flex align-items-start py-5">
-    <div class="container">
-      <div class="row justify-content-center mt-4 mt-md-5">
-        <div class="col-11 col-sm-10 col-md-8 col-lg-6">
-          <div class="d-grid gap-3 btn-panel">
-            <a href="login.html"    class="btn btn-primary">Iniciar sesión</a>
-            <a href="registro.html" class="btn btn-primary">Registrarse</a>
-            <a href="home.html"     class="btn btn-secondary">Entrar como visitante</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer class="mt-auto py-3 bg-transparent">
-      <div class="container text-center">
-          <small class="text-white-50">© 2025 Volando.uy</small>
-      </div>
-    </footer>
-  </main>
+<body>
 
-  <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
