--- a/volandouy oficial/src/main/webapp/front/registroCiudad.html
+++ b/volandouy oficial/src/main/webapp/front/registroCiudad.html
@@ -76,7 +76,7 @@
                     <textarea class="form-control" id="descripcionAeropuerto" rows="3" placeholder="Ej: Aeropuerto Internacional de Carrasco, ubicado en Montevideo, es el principal aeropuerto de Uruguay." required></textarea>
                 </div>
                 <div class="mb-3">
-                    <datelabel for="fechaAlta" class="form-label">Fecha de Alta</label>
+                    <label for="fechaAlta" class="form-label">Fecha de Alta</label>
                     <input type="date" class="form-control" id="fechaAlta" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Registrar Ciudad</button>
