--- a/volandouy oficial/src/main/webapp/front/registroVuelo.html
+++ b/volandouy oficial/src/main/webapp/front/registroVuelo.html
@@ -77,11 +77,11 @@
         </div>
 
         <div class="mb-3">
-            <laber for="nombreVuelo" class="form-label">Nombre del Vuelo</label>
+            <label for="nombreVuelo" class="form-label">Nombre del Vuelo</label>
             <input type="text" class="form-control" id="nombreVuelo" placeholder="Ej: PU1234" required>
         </div>
         <div class="mb-3">
-            <datelabel for="fecha" class="form-label">Fecha del Vuelo</label>
+            <label for="fecha" class="form-label">Fecha del Vuelo</label>
             <input type="date" class="form-control" id="fecha" required>
         </div>
         <div class="mb-3">
@@ -102,6 +102,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Registrar Vuelo</button>
         <a href="../home.html" class="btn btn-secondary">Cancelar</a>
+      </div>
       </main>
     </div>
   </div>
